--- a/index.html
+++ b/index.html
@@ -30,8 +30,46 @@
                     <img src="Assests/Final Logo PNG-02-2.png" id = "main-logo-img">
                 </div>
             </div>
-            <div class = "section-2"></div>
-            <div class = "section-3"></div>
+            <div class = "section-2">
+                <div id="text-group">
+                    <h1>Partnering with communities in Australia to identify nature-based approaches for  flood resilience </h1>
+                    <h2>NATIONAL GUIDELINES</h2>
+                </div>
+                <div id = "cirlce-group">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="864.352" height="825" viewBox="0 0 864.352 825">
+                        <g id="Ellipse_75" data-name="Ellipse 75" transform="translate(149.883 170)" fill="#9cd9eb" stroke="#707070" stroke-width="1" opacity="0.83">
+                          <circle cx="327.5" cy="327.5" r="327.5" stroke="none"/>
+                          <circle cx="327.5" cy="327.5" r="327" fill="none"/>
+                        </g>
+                        <g id="Ellipse_76" data-name="Ellipse 76" transform="translate(0 532.541)" fill="#5ab87c" stroke="#707070" stroke-width="1" opacity="0.74">
+                          <ellipse cx="127.5" cy="127.895" rx="127.5" ry="127.895" stroke="none"/>
+                          <ellipse cx="127.5" cy="127.895" rx="127" ry="127.395" fill="none"/>
+                        </g>
+                        <g id="Ellipse_80" data-name="Ellipse 80" transform="translate(524.352)" fill="#a6d5b1" stroke="#707070" stroke-width="1">
+                          <circle cx="170" cy="170" r="170" stroke="none"/>
+                          <circle cx="170" cy="170" r="169.5" fill="none"/>
+                        </g>
+                      </svg>
+                </div>
+            </div>
+            <div class = "section-3">
+                <div id = "flex-container">
+                    <div class="main-text-box">
+                        <div id="text-container1">
+                            <h1>WHY FLOODING</h1>
+                            <p>
+                                Flooding is expected to cause increasing loss and damage in regional communities situated on floodplains as levees and dams are over-topped by ever greater floods. Flooding however is a natural process essential for floodplain ecosystems.
+                                <br>
+                                <br>
+Communities can also be disadvantaged by the loss of recreation and tourism opportunities and impacts on critical groundwater recharge. Unlike traditional engineering solutions, Nature-based Solutions can increase the natural resilience of the landscape, allowing the natural environment to function with reduced impact on surrounding communities.
+                            </p>
+                        </div>
+                    </div>
+                    <div id = "animation1"></div>
+
+
+                </div>
+            </div>
             <div class = "section-4"></div>
 
         </div>
