--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
 
                 </div>
             </div>
-            <div class = "section-4"></div>
+            <div class = "section-4">
+                <img src="Assests/Berrinba_Wetlands_billabong.png" class="backdrop-image">
+                <div id="communities-text">
+                    <p>Communities can be disadvantaged by the 
+                        loss of recreation and tourism opportunities and
+                        impacts on critical groundwater recharge.</p>
+                </div>
+            </div>
 
         </div>
         
