Up to section 11 completed

--- a/index.html
+++ b/index.html
@@ -178,7 +178,61 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                     </div>
                 </div>
             </div>
+            <div class = "section-9">
+                <div id = "interactive-map">
+                    <p>Interactive Map will live here - place holder atm</p>
+                </div>
+            </div>
+            <div class = "section-10">
+                <h1> NbS types </h1>
+                <div class = "type-container">
+                    <div id = "img-desc-container">
+                        <img src="Assests/Icons/landuse.svg" id="focal-image">
+                        <div id = "focal-container">
+                            <h1 id ="focal-heading">Strategic Land Use</h1>
+                            <p id = "focal-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut velit feugiat massa posuere dictum laoreet lobortis lectus. Nulla venenatis libero ac tellus ullamcorper placerat. Curabitur maximus non dui eu lobortis. Vivamus commodo imperdiet ultrices. Praesent mollis, arcu in pellentesque maximus, ante nisi pharetra erat, non pulvinar justo lorem at sem. Integer eu justo mi. Pellentesque eu aliquam neque. Nunc commodo eros quis nisi viverra maximus. Vestibulum maximus leo est, et dapibus dolor accumsan ac. Nullam massa arcu, tempus non mollis a, convallis non augue. Donec tincidunt ex et faucibus placerat. Proin eros dui, posuere quis commodo nec, consequat eu turpis. Vestibulum at justo quis metus pellentesque efficitur ut sit amet dolor. Aliquam elementum, dolor in pretium dictum, ligula nibh semper orci, eu pretium leo lorem sit amet ipsum. </p>
+                        </div>
+                    </div>
+                    <div id = "icon-list">
+                        <div id ="landuse" class = "icon-containers">
+                            <img src="Assests/Icons/landuse.svg">
+                            <h1>Strategic Land Use</h1>
+                        </div>
+                        <div id ="urban" class = "icon-containers">
+                            <img src="Assests/Icons/urban.svg">
+                            <h1>Urban Blue-Green Infrastructure</h1>
+                        </div>
+                        <div id ="agricultural" class = "icon-containers">
+                            <img src="Assests/Icons/agricultural.svg">
+                            <h1>Agricultrual Practice Change</h1>
+                        </div>
+                        <div id ="stream" class = "icon-containers">
+                            <img src="Assests/Icons/stream.svg">
+                            <h1>Stream Restoration</h1>
+                        </div>
+                        <div id ="ecosystem" class = "icon-containers">
+                            <img src="Assests/Icons/ecosystem.svg">
+                            <h1>Ecosystem / Watershed Restoration</h1>
+                        </div>
+                        <div id ="wetlands" class = "icon-containers">
+                            <img src="Assests/Icons/wetlands.svg">
+                            <h1>Wetlands</h1>
+                        </div>
+                        <div id ="reforestation" class = "icon-containers">
+                            <img src="Assests/Icons/reforestation.svg">
+                            <h1>Reforestation</h1>
+                        </div>
+                        <div id ="paleochannel" class = "icon-containers">
+                            <img src="Assests/Icons/paleochannel.svg">
+                            <h1>Paleochannel</h1>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class = "section-11">
+
+            </div>
 
         </div>
         
@@ -190,5 +244,6 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
 
         
         <!-- <script src="" async defer></script> -->
+        <script src="script.js"></script>
     </body>
 </html>
