finished-nav-bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class = "overall-container">
-            <div id = "menu">
+            <!-- <div id = "menu">
                 <img src="Assests/Menu 1.svg" onclick="myFunction()">
                 <div class = "nav-bar">
                 <div id="mylinks">
@@ -25,6 +25,18 @@
                     <a href="">Contact Us</a>
                 </div>
                 </div>
+            </div> -->
+            <div id = "sticky-menu">
+                <div class = "sticky-nav-bar">
+                    <img src="Assests/Logo-alone.svg" id = "logo-alone">
+                    <div id="sticky-mylinks">
+                        <!-- <img src="Assests/Logo-alone.svg" id = "logo-alone"> -->
+                        <a href="">Case Studies</a>
+                        <a href="">NbS Solutions</a>
+                        <a href="">About Us</a>
+                        <a href="">Contact Us</a>
+                    </div>
+                    </div>
             </div>
             <div class = "section-1">
                 <img src="Assests/CalliopeRiverInFlood-QueenslandDec2010.png" class = "hero-image">
