changes in class

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                     <h1>Partnering with communities in Australia to identify nature-based approaches for  flood resilience </h1>
                     <h2>NATIONAL GUIDELINES</h2>
                 </div>
-                <div id = "cirlce-group">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="864.352" height="825" viewBox="0 0 864.352 825">
+                <!-- TODO: Address CSS Circle Issues - About relative SVG sizing -->
+                <div id = "circle-group">
+                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 864.352 825">
                         <g id="Ellipse_75" data-name="Ellipse 75" transform="translate(149.883 170)" fill="#9cd9eb" stroke="#9cd9eb" stroke-width="1" opacity="0.83">
                           <circle cx="327.5" cy="327.5" r="327.5" stroke="none"/>
                           <circle cx="327.5" cy="327.5" r="327" fill="none"/>
@@ -163,7 +164,6 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                                 Aliquam id ante sem. Curabitur sodales pellentesque molestie. Suspendisse et leo a tortor venenatis maximus. Nulla et diam ipsum. Aliquam erat volutpat. Quisque mattis ornare metus sit amet rhoncus. Donec eget felis feugiat, imperdiet sem vitae, sollicitudin tortor. Nam a lacus dolor. Duis mi sem, fringilla id nisi in, luctus venenatis libero. Vivamus vulputate vehicula lorem, nec varius augue finibus ut. Praesent quis est dui. Nulla auctor suscipit sodales. Maecenas tincidunt euismod tortor, ac aliquet lorem tempus in.
                                 <br>
                                 <br>
-                                Proin sodales dapibus dictum. In ligula erat, consectetur vitae elementum id, volutpat ac elit. In neque libero, volutpat at tempor id, commodo vitae lorem. Maecenas congue arcu id justo laoreet vulputate. In interdum, diam eget efficitur fringilla, erat odio suscipit quam, non posuere purus dolor id enim. Cras pretium nulla vitae tellus consequat malesuada. Vivamus ac eleifend odio, facilisis luctus lectus. Vivamus et urna ut ligula maximus mollis. Integer ac lectus mattis, elementum lectus hendrerit, tempus eros. Maecenas pulvinar urna eu felis elementum dapibus id vel orci. Curabitur ornare velit at blandit varius. Ut et feugiat neque. Donec quam risus, commodo sed lacus non, viverra accumsan mauris. Morbi luctus viverra ornare. </p>
                         </div>
                     </div>
                     <div class = "example-img-container">
@@ -198,13 +198,12 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                                 Aliquam id ante sem. Curabitur sodales pellentesque molestie. Suspendisse et leo a tortor venenatis maximus. Nulla et diam ipsum. Aliquam erat volutpat. Quisque mattis ornare metus sit amet rhoncus. Donec eget felis feugiat, imperdiet sem vitae, sollicitudin tortor. Nam a lacus dolor. Duis mi sem, fringilla id nisi in, luctus venenatis libero. Vivamus vulputate vehicula lorem, nec varius augue finibus ut. Praesent quis est dui. Nulla auctor suscipit sodales. Maecenas tincidunt euismod tortor, ac aliquet lorem tempus in.
                                 <br>
                                 <br>
-                                Proin sodales dapibus dictum. In ligula erat, consectetur vitae elementum id, volutpat ac elit. In neque libero, volutpat at tempor id, commodo vitae lorem. Maecenas congue arcu id justo laoreet vulputate. In interdum, diam eget efficitur fringilla, erat odio suscipit quam, non posuere purus dolor id enim. Cras pretium nulla vitae tellus consequat malesuada. Vivamus ac eleifend odio, facilisis luctus lectus. Vivamus et urna ut ligula maximus mollis. Integer ac lectus mattis, elementum lectus hendrerit, tempus eros. Maecenas pulvinar urna eu felis elementum dapibus id vel orci. Curabitur ornare velit at blandit varius. Ut et feugiat neque. Donec quam risus, commodo sed lacus non, viverra accumsan mauris. Morbi luctus viverra ornare. </p>
                         </div>
                     </div>
                 </div>
                 <div id = "example-brown-circle">
                     <svg xmlns="http://www.w3.org/2000/svg" width="900" height="900" viewBox="0 0 900 900">
-                        <g id="Ellipse_87" data-name="Ellipse 87" fill="#b09779" stroke="#b09779" stroke-width="1" opacity="0.57">
+                        <g id="Ellipse_87" data-name="Ellipse 87" fill="#b09779" stroke="#b09779" stroke-width="1" opacity="0.4">
                           <circle cx="450" cy="450" r="450" stroke="none"/>
                           <circle cx="450" cy="450" r="449.5" fill="none"/>
                         </g>
@@ -227,7 +226,6 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                                 Aliquam id ante sem. Curabitur sodales pellentesque molestie. Suspendisse et leo a tortor venenatis maximus. Nulla et diam ipsum. Aliquam erat volutpat. Quisque mattis ornare metus sit amet rhoncus. Donec eget felis feugiat, imperdiet sem vitae, sollicitudin tortor. Nam a lacus dolor. Duis mi sem, fringilla id nisi in, luctus venenatis libero. Vivamus vulputate vehicula lorem, nec varius augue finibus ut. Praesent quis est dui. Nulla auctor suscipit sodales. Maecenas tincidunt euismod tortor, ac aliquet lorem tempus in.
                                 <br>
                                 <br>
-                                Proin sodales dapibus dictum. In ligula erat, consectetur vitae elementum id, volutpat ac elit. In neque libero, volutpat at tempor id, commodo vitae lorem. Maecenas congue arcu id justo laoreet vulputate. In interdum, diam eget efficitur fringilla, erat odio suscipit quam, non posuere purus dolor id enim. Cras pretium nulla vitae tellus consequat malesuada. Vivamus ac eleifend odio, facilisis luctus lectus. Vivamus et urna ut ligula maximus mollis. Integer ac lectus mattis, elementum lectus hendrerit, tempus eros. Maecenas pulvinar urna eu felis elementum dapibus id vel orci. Curabitur ornare velit at blandit varius. Ut et feugiat neque. Donec quam risus, commodo sed lacus non, viverra accumsan mauris. Morbi luctus viverra ornare. 
                             </p>
                         </div>
                     </div>
@@ -377,11 +375,11 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                     <div id="nbs-tag">
                         <p>© 2023 Nature-Based Flood Resilience</p>
                     </div>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="1933.957" height="821.915" viewBox="0 0 1933.957 821.915">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1933.957 821.915" id = "form-svg">
                         <path id="Union_4" data-name="Union 4" d="M327.5-7935.086v-672.778H327l.5-.215v-.16h.374c19.445-8.327,359.328-152.49,574.262-148.687,220.136,3.9,561.528,124.941,1001.624,148.688h239.77c64.882-6.01,93.513-17.85,105.251-29.69,17.638-17.792-2.913-35.583,3.856-33.594,14.851,4.362,5.289,63.659,5.289,63.659H2246.5v672.778Z" transform="translate(-327 8757.001)" fill="#3b8da5"/>
-                      </svg> -->
+                      </svg>
                       
-                        <img src="Assests/backdrop.svg" id="backdrop-svg">
+                        <!-- <img src="Assests/backdrop.svg" id="backdrop-svg"> -->
                 </div>
             </div>
 
