--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                     </div>
                     <div id = "animation1" class = "DataVisAnim1">
                         <div id = "animation1-text">  
-                            <h1>By 2060, floods could cost Australian
+                            <h1>By 2060, floods could cost Australia
                                 $40 billion per year</h1>
                             <h2>Deliotte Access Economics 2021</h2>
                         </div>
@@ -157,14 +157,13 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                 </div>
                 <div id = "section-5-text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed rhoncus nunc, non rutrum diam. Suspendisse potenti. Pellentesque vitae tempor risus, ut euismod augue. Nulla finibus eros sit amet sodales tempus. Mauris tempus eu nisi ullamcorper gravida. Donec mollis faucibus orci sed tempor. Aliquam ut nisi a ante feugiat accumsan. Aenean aliquet mi purus, et efficitur nulla dignissim eget. Phasellus vehicula nibh dui, et aliquet massa bibendum nec. Nulla sed ullamcorper diam. Proin gravida, lacus et dapibus laoreet, turpis purus blandit mauris, non aliquam diam lacus id ante. Nulla quam odio, gravida eget arcu sed, scelerisque finibus ipsum. Nunc at risus pulvinar, dictum erat in, lacinia est. 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed rhoncus nunc, non rutrum diam. Suspendisse potenti. Pellentesque vitae tempor risus, ut euismod augue. Nulla finibus eros sit amet sodales tempus. Mauris tempus eu nisi ullamcorper gravida. Donec mollis faucibus orci sed tempor. Aliquam ut nisi a ante feugiat accumsan. Aenean aliquet mi purus, et efficitur nulla dignissim eget. Phasellus vehicula nibh dui, et aliquet massa bibendum nec. Nulla sed ullamcorper diam. Proin gravida, lacus et dapibus laoreet, turpis purus blandit mauris, non aliquam diam lacus id ante. Nulla quam odio, gravida eget arcu sed, scelerisque finibus ipsum. Nunc at risus pulvinar, dictum erat in, lacinia est. 
 
                     </p>
                     
                 </div>
             </div>
             </div>
-            <div class = "sections-example">
+            <div class = "sections-example animation-div">
                 <div class="examples-container">
                     <div class = "example-text-container">
                         <div class = "title-container">
@@ -258,7 +257,7 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                 </div>
             </div>
             <div class = "section-9">
-                    <h1>Interactive Map</h1>
+                    <h1>Case Study Map</h1>
                 <div id = "map">
                     <script src="map.js"></script>
                 </div>
