--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                 </div>
                     <div id = "small-light-brown-circle" class="step will-animate right">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
-                            <g id="Ellipse_89" data-name="Ellipse 89" fill="#b09779" stroke="#707070" stroke-width="1" opacity="0.57">
+                            <g id="Ellipse_89" data-name="Ellipse 89" fill="#b09779" stroke="#b09779" stroke-width="1" opacity="0.57">
                               <circle cx="250" cy="250" r="250" stroke="none"/>
                               <circle cx="250" cy="250" r="249.5" fill="none"/>
                             </g>
@@ -247,7 +247,7 @@ Communities can also be disadvantaged by the loss of recreation and tourism oppo
                 </div>
                 <div id = "small-light-green-circle" class="step will-animate right">
                     <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 500 500">
-                        <g id="Ellipse_90" data-name="Ellipse 90" fill="#c4e3cf" stroke="#707070" stroke-width="1" opacity = "0.57">
+                        <g id="Ellipse_90" data-name="Ellipse 90" fill="#c4e3cf" stroke="#c4e3cf" stroke-width="1" opacity = "0.57">
                           <circle cx="250" cy="250" r="250" stroke="none"/>
                           <circle cx="250" cy="250" r="249.5" fill="none"/>
                         </g>
