--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Scrollama JS -->
         <script src="https://unpkg.com/scrollama"></script>
         <!-- P5.js used for the animations. -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
         <!-- Mapbox JS libraries -->
         <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
